test/importers/invalid/row_number_reserved_column_name_importer.rb
require 'csv_party'

class RowNumberReservedColumnNameImporter < CSVParty::Importer
  column :row_number
end
